<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
      style="@style/entete"
        android:text="@string/mainentete"
     />
    <Button
       style="@style/mainbtn"
        android:text="@string/btn1"
        android:onClick="acceder"
        android:id="@+id/btn1"/>
    <Button
        style="@style/mainbtn"
        android:text="@string/btn2"
        android:onClick="acceder"
        android:id="@+id/btn2"
        />
    <Button
    style="@style/mainbtn"
    android:text="@string/btn3"
        android:onClick="acceder"
        android:id="@+id/btn3"/>
    <Button
    style="@style/mainbtn"
    android:text="@string/btn4"
        android:onClick="acceder"
        android:id="@+id/btn4"/>

</LinearLayout>